--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,16 @@
     ],
     "require": {
         "php": ">=8.0",
-        "illuminate/support": ">=10.0.0"
+        "ext-fileinfo": "*",
+        "ext-zlib": "*",
+        "illuminate/support": ">=11.0.0"
+    }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-latest",
+        "orchestra/testbench": "10.x-dev",
+        "squizlabs/php_codesniffer": "4.x-dev",
+        "larastan/larastan": "3.x-dev"
     },
     "autoload": {
         "psr-4": {
@@ -31,11 +40,6 @@
         }
     },
     "minimum-stability": "dev",
-    "require-dev": {
-        "orchestra/testbench": "6.*",
-        "squizlabs/php_codesniffer": "3.*",
-        "nunomaduro/larastan": "^0.6.0@dev"
-    },
     "scripts": {
         "phpstan": "php -d memory_limit=-1 ./vendor/bin/phpstan analyse",
         "phpcbf": "vendor/bin/phpcbf --standard=./.phpcs.xml ./",
